--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "nodejs-backend-api",
+  "name": "meteor-madness-backend",
   "version": "1.0.0",
-  "description": "Node.js Backend with swappable API implementation",
+  "description": "Backend for NASA Space Apps Challenge - Meteor Madness (Impactor-2025)",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test-api.js"
   },
   "keywords": [
-    "nodejs",
-    "express",
-    "api",
-    "backend"
+    "nasa",
+    "space-apps",
+    "asteroid",
+    "meteor",
+    "impact-simulation"
   ],
-  "author": "",
-  "license": "ISC",
+  "author": "Your Team",
+  "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.12.2",
     "cors": "^2.8.5",
-    "axios": "^1.6.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
